--- a/index.html
+++ b/index.html
@@ -17,27 +17,32 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script src="js/funciones.js"></script>
   </head>
   <body>
   	<div class="container">
   		<div class="row">
-  			<div class="col-md-3">
+  			<div class="col-md-1">
   			</div>
-  			<div class="col-md-6 text-center">
+  			<div class="col-md-10 text-center">
   				<h1>Bienvenido al nuevo sistema de localización de la Universidad Autónoma de Aguascalientes</h1>
   			</div>	
+        <div class="col-md-1">
+        </div>
   		</div>
   		<div class="row">
-  			<div class="input-group">
-      			<input type="text" class="form-control" placeholder="Search for...">
-      				<span class="input-group-btn">
-        				<button class="btn btn-default" type="button">Go!</button>
-      				</span>
-    		</div>
-  			<textarea class="form-control" rows="3"></textarea>
+        <div class="col-md-1"></div>
+        <div class="col-md-10">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Ingrese id">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button">Buscar</button>
+              </span>
+            </div><!-- /input-group -->
+        </div>
+        <div class="col-md-1"></div>
   		</div>
-  		
-  	</div>
+  	</div> <!--div container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
