login chidillo pero falta

--- a/login_Usuario.html
+++ b/login_Usuario.html
@@ -1,29 +1,16 @@
-<html lang="en"><head>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>Signin Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="../../dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <title>Servicio de Ubicación de la Universidad Autónoma de Aguascalientes</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/funciones.js"></script>
   </head>
 
   <body>
@@ -31,24 +18,20 @@
     <div class="container">
 
       <form class="form-signin">
-        <h2 class="form-signin-heading">Please sign in</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="">
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <h2 class="form-signin-heading">Inicio de Sesión</h2>
+        <label for="inputEmail" class="sr-only">Id</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Id" required="" autofocus="">
+        <label for="inputPassword" class="sr-only">Contraseña</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="dd/mm/aa" required="">
         <div class="checkbox">
           <label>
-            <input type="checkbox" value="remember-me"> Remember me
+            <input type="checkbox" value="remember-me"> Recordar
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
       </form>
 
-    </div> <!-- /container -->
-
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-  
-
-<script type="text/javascript" async="" src="http://webtuneup.avg.com/SI/?pid=wtu&amp;cid={020E1499-6990-4BCE-A6D6-79138451EBA0}&amp;mid=31a18100218247cda1eff1c0c2b84f29-b692ee8198644f950bd7a0df16507ab12fe20d94&amp;ds=AVG&amp;v=4.1.8.599&amp;lang=es-es&amp;pr=fr&amp;d=2015/04/30 19:53:03&amp;ud=4/10/2015 19:16:9&amp;cmpid=0915tb&amp;domain=mysearch.avg.com&amp;FileUpdateDate=1444004221000&amp;protocol=https"></script></body></html>
+    </div>
+    <script type="text/javascript" async="" src="http://webtuneup.avg.com/SI/?pid=wtu&amp;cid={020E1499-6990-4BCE-A6D6-79138451EBA0}&amp;mid=31a18100218247cda1eff1c0c2b84f29-b692ee8198644f950bd7a0df16507ab12fe20d94&amp;ds=AVG&amp;v=4.1.8.599&amp;lang=es-es&amp;pr=fr&amp;d=2015/04/30 19:53:03&amp;ud=4/10/2015 19:16:9&amp;cmpid=0915tb&amp;domain=mysearch.avg.com&amp;FileUpdateDate=1444004221000&amp;protocol=https"></script>
+  </body>
+</html>
