--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
   <link rel="stylesheet" type="text/css" href="css/estilos.css">
+  <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -32,7 +34,7 @@
   			<div class="col-md-1">
   			</div>
   			<div class="col-md-10 text-center">
-  				<h1>Bienvenido al nuevo sistema de localización de la Universidad Autónoma de Aguascalientes</h1>
+  				<h1 id="texto_cabeza">Bienvenido al nuevo sistema de localización de la Universidad Autónoma de Aguascalientes</h1>
   			</div>	
         <div class="col-md-1">
         </div>
@@ -54,7 +56,7 @@
             <label for="datos_personales_nombre"> 
               Razón por la cual lo/a busca <span class="glyphicon glyphicon-question-sign"> </span> 
             </label>
-            <textarea class="form-control" rows="5" id="datos_personales_razon"></textarea>
+            <textarea class="form-control" rows="5" id="datos_personales_razon" placeholder="Comentario breve.."></textarea>
             <p></p>
             <p></p>
             <button type="button" class="btn btn-default btn-lg" id="btn_buscar">
