--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
         <div class="col-md-3"></div>
         <div class="col-md-6 text-center">
             <div class="input-group">
-              <span class="input-group-addon" id="basic-addon3">Ingrese id del profesor o alumno a buscar</span>
+              <span class="input-group-addon" >Ingrese id del profesor o alumno a buscar</span>
               <input type="text" class="form-control" aria-describedby="basic-addon3" placeholder="ID">
             </div>
             <p></p>
-            <label for="datos_personales_nombre">Ingrese sus siguientes datos personales</label>
+            <label for="datos_personales_nombre" id ="text-ingresa-datos">Ingrese sus siguientes datos personales</label>
             <p></p>
             <input type="text" class="form-control " id="datos_peronales_nombre" placeholder="Nombre">
             <p></p>
             <input type="text" class="form-control " id="datos_peronales_apellido" placeholder="Apellido">
             <p></p>
-            <label for="datos_personales_nombre"> 
+            <label for="datos_personales_nombre" id ="text-razon"> 
               Razón por la cual lo/a busca <span class="glyphicon glyphicon-question-sign"> </span> 
             </label>
             <textarea class="form-control" rows="5" id="datos_personales_razon" placeholder="Comentario breve.."></textarea>
