--- a/login_Usuario.html
+++ b/login_Usuario.html
@@ -14,23 +14,30 @@
   </head>
 
   <body>
-
     <div class="container">
-
-      <form class="form-signin">
-        <h2 class="form-signin-heading">Inicio de Sesión</h2>
-        <label for="inputEmail" class="sr-only">Id</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Id" required="" autofocus="">
-        <label for="inputPassword" class="sr-only">Contraseña</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="dd/mm/aa" required="">
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Recordar
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
-      </form>
-
+      <div class="row"></div>
+      <div class="row">
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+          <form class="form-signin">
+            <h2 class="form-signin-heading"><span class="label label-primary">Iniciar Sesión</span></h2>
+            <!--<label for="inputEmail" class="sr-only">Id</label>
+            <span class="label label-info">Id</span>-->
+            <input type="email" id="inputEmail" class="form-control" placeholder="Id" required="" autofocus="">
+            <label for="inputPassword" class="sr-only">Contraseña</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="dd/mm/aa" required="">
+            <div class="checkbox">
+              <label>
+                <input type="checkbox" value="remember-me"> Recordar
+              </label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+          </form>
+          </div>
+        <div class="col-md-4"></div>
+      </div>
+      <div class="row"></div>
+     
     </div>
     <script type="text/javascript" async="" src="http://webtuneup.avg.com/SI/?pid=wtu&amp;cid={020E1499-6990-4BCE-A6D6-79138451EBA0}&amp;mid=31a18100218247cda1eff1c0c2b84f29-b692ee8198644f950bd7a0df16507ab12fe20d94&amp;ds=AVG&amp;v=4.1.8.599&amp;lang=es-es&amp;pr=fr&amp;d=2015/04/30 19:53:03&amp;ud=4/10/2015 19:16:9&amp;cmpid=0915tb&amp;domain=mysearch.avg.com&amp;FileUpdateDate=1444004221000&amp;protocol=https"></script>
   </body>
