Pruebas de colores

--- a/login_Usuario.html
+++ b/login_Usuario.html
@@ -7,6 +7,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -20,7 +21,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-4">
           <form class="form-signin">
-            <h2 class="form-signin-heading"><span class="label label-primary">Iniciar Sesión</span></h2>
+            <h2 class="form-signin-heading text-center"><span class="label label-primary">Iniciar Sesión</span></h2>
             <!--<label for="inputEmail" class="sr-only">Id</label>
             <span class="label label-info">Id</span>-->
             <input type="email" id="inputEmail" class="form-control" placeholder="Id" required="" autofocus="">
