--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <textarea class="form-control" rows="5" id="datos_personales_razon" placeholder="Comentario breve.."></textarea>
             <p></p>
             <p></p>
-            <button type="button" class="btn btn-default btn-lg" id="btn_buscar">
+            <button type="button" class="btn  btn-lg" id="btn_buscar">
               <span class="glyphicon glyphicon-search" aria-hidden="true"></span> Buscar
             </button>
         </div>
