--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/place4.ico">
     <title>Servicio de Ubicación de la Universidad Autónoma de Aguascalientes</title>
 
     <!-- Bootstrap -->
@@ -44,7 +45,7 @@
         <div class="col-md-6 text-center">
             <div class="input-group">
               <span class="input-group-addon" >Ingrese id del profesor o alumno a buscar</span>
-              <input type="text" class="form-control" aria-describedby="basic-addon3" placeholder="ID">
+              <input type="text" class="form-control" id="datos_id"aria-describedby="basic-addon3" placeholder="ID">
             </div>
             <p></p>
             <label for="datos_personales_nombre" id ="text-ingresa-datos">Ingrese sus siguientes datos personales</label>
