--- a/mostrar_horario.html
+++ b/mostrar_horario.html
@@ -14,7 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Latest compiled and minified CSS -->
-	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
 	<!-- Optional theme -->
 	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css"> -->
@@ -24,7 +24,7 @@
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
-	<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>-->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <link rel="stylesheet" type="text/css" href="css/estilos.css">
@@ -34,7 +34,6 @@
     <script src='js/fullcalendar.min.js'></script>
     <script src="js/lang-all.js"></script>
 <script>
-
 $(document).ready(function() {
   $('#calendar').fullCalendar({
     header: {
@@ -86,104 +85,72 @@ $(document).ready(function() {
 </script>
 <style>
 
-  body {
-    margin: 0;
-    padding: 0;
-    font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
-    font-size: 14px;
-  }
-
-  #script-warning {
-    display: none;
-    background: #eee;
-    border-bottom: 1px solid #ddd;
-    padding: 0 10px;
-    line-height: 40px;
-    text-align: center;
-    font-weight: bold;
-    font-size: 12px;
-    color: red;
-  }
-
-  #loading {
-    display: none;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
-
   #calendar {
-    max-width: 900px;
+    /*max-width: auto;*/
+    max-height: auto;
     margin: 40px auto;
     padding: 0 10px;
   }
 
 </style>
-
-
   </head>
-  <body>
+<body>
+<div class="container">
   <div class="row">
-    <div class="col-xs-1">
+    <div class="col-md-1">
     </div>
-    <div clasS="col-xs-10 text-center">
+    <div clasS="col-md-10 text-center">
       <h1 id="texto_cabeza">Sistema de localizacion de la Universidad Autónoma de Aguascalientes</h1>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-1"></div>
-    <div class="col-xs-3">
+    <div class="col-md-1"></div>
+    <div class="col-md-2">
       <h4> <span class="glyphicon glyphicon-map-marker"> </span>Estado: <small id="dato_estado"></small></h4>
     </div>
-    <div class="col-xs-3">
+    <div class="col-md-2">
       <h4> <span class="glyphicon glyphicon-map-marker"> </span>Ciudad: <small id="dato_ciudad"></small></h4>
     </div>
-    <div class="col-xs-3">
+    <div class="col-md-2">
       <h4> <span class="glyphicon glyphicon-map-marker"> </span>Campus: <small id="dato_campus"></small></h4>
     </div>
-    
-  </div>
-  <div class="row">
-    <div class="col-xs-1"></div>
-    <div class="col-xs-3">
-      <h4> <span class="glyphicon glyphicon-map-marker"> </span>Colonia: <small id="dato_colonia"></small></h4>
-    </div>
-    <div class="col-xs-3">
-      <h4> <span class="glyphicon glyphicon-map-marker"> </span>Calle: <small id="dato_calle"></small></h4>
-    </div>
-    <div class="col-xs-3">
-      <h4> <span class="glyphicon glyphicon-map-marker"> </span>N° Exterior: <small id="dato_noext"></small></h4>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-3"></div>
-    <div class="col-xs-3">
+    <div class="col-md-2">
       <h4> <span class="glyphicon glyphicon-map-marker"> </span>Latitud: <small id="dato_latitud"></small></h4>
     </div>
-    <div class="col-xs-3">
+    <div class="col-md-2">
       <h4> <span class="glyphicon glyphicon-map-marker"> </span>Longitud: <small id="dato_longitud"></small></h4>
     </div>
   </div>
   <div class="row">
-    <div class="col-xs-1"></div>
-    <div class="col-xs-3">
+    <div class="col-md-2"></div>
+    <div class="col-md-3">
+      <h4> <span class="glyphicon glyphicon-map-marker"> </span>Colonia: <small id="dato_colonia"></small></h4>
+    </div>
+    <div class="col-md-3">
+      <h4> <span class="glyphicon glyphicon-map-marker"> </span>Calle: <small id="dato_calle"></small></h4>
+    </div>
+    <div class="col-md-3">
+      <h4> <span class="glyphicon glyphicon-map-marker"> </span>N° Exterior: <small id="dato_noext"></small></h4>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-3">
       <h4> <span class="glyphicon glyphicon-user"> </span>Nombre: <small id="dato_nombre"></small></h4>
     </div>
-    <div class="col-xs-3">
+    <div class="col-md-3">
       <h4> <span class="glyphicon glyphicon-user"> </span>Semestre Grupo: <small id="dato_syg"></small></h4>
     </div>
-    <div class="col-xs-3">
+    <div class="col-md-3">
       <h4> <span class="glyphicon glyphicon-user"> </span>Carrera: <small id="dato_carrera"></small></h4>
     </div>
   </div>
-
-  <hr role="separator" class="divider"/>
   <div class="row">
-    <div class="col-xs-1">
-    </div>
-    <div class="col-xs-10">
+    <div class="col-md-1"></div>
+    <div class="col-md-10">
       <div id='calendar'></div>
     </div>
   </div>
-  </body>
+</div>
+</body>
 </html>
