Agregando loggin_mamalon

--- a/login_Usuario.html
+++ b/login_Usuario.html
@@ -22,9 +22,9 @@
         <div class="col-md-4">
           <form class="form-signin">
             <h2 class="form-signin-heading text-center"><span class="label label-primary">Iniciar Sesión</span></h2>
-            <!--<label for="inputEmail" class="sr-only">Id</label>
-            <span class="label label-info">Id</span>-->
-            <input type="email" id="inputEmail" class="form-control" placeholder="Id" required="" autofocus="">
+            <label for="inputUsuario" class="sr-only">Id</label>
+            <span class="label label-info">Id</span>
+            <input type="text" id="inputUsuario" class="form-control" placeholder="Id" required="" autofocus="">
             <label for="inputPassword" class="sr-only">Contraseña</label>
             <input type="password" id="inputPassword" class="form-control" placeholder="dd/mm/aa" required="">
             <div class="checkbox">
@@ -34,7 +34,7 @@
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
           </form>
-          </div>
+        </div>
         <div class="col-md-4"></div>
       </div>
       <div class="row"></div>
