--- a/log-in.html
+++ b/log-in.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Servicio de Ubicación de la Universidad Autónoma de Aguascalientes</title>
-    
+    <link rel="shortcut icon" type="image/x-icon" href="images/place4.ico">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
@@ -31,7 +31,6 @@
 			    	<h3 class="panel-title">Iniciar Sesión</h3>
 			 	</div>
 			  	<div class="panel-body">
-			    	<form accept-charset="UTF-8" role="form">
                     <fieldset>
 			    	  	<div class="form-group">
 			    		    <input class="form-control" id="ID"placeholder="ID" type="text">
@@ -46,7 +45,6 @@
 			    	    </div>
 			    		<button class="btn btn-lg btn-success btn-block" id="btnn">Iniciar sesión</button>
 			    	</fieldset>
-			      	</form>
 			    </div>
 			</div>
 		</div>
