--- a/log-in.html
+++ b/log-in.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Servicio de Ubicación de la Universidad Autónoma de Aguascalientes</title>
+    <title>Sistema de Localización de la Universidad Autónoma de Aguascalientes</title>
     <link rel="shortcut icon" type="image/x-icon" href="images/place4.ico">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
