--- a/mostrar_horario.html
+++ b/mostrar_horario.html
@@ -7,7 +7,7 @@
     <meta charset='utf-8' />
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="shortcut icon" type="image/x-icon" href="images/place4.ico">
-    <title>Servicio de Ubicación de la Universidad Autónoma de Aguascalientes</title>
+    <title>Sistema de Localización de la Universidad Autónoma de Aguascalientes</title>
 
     <!-- Bootstrap -->
     
