--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="shortcut icon" type="image/x-icon" href="images/place4.ico">
-    <title>Servicio de Ubicación de la Universidad Autónoma de Aguascalientes</title>
+    <title>Sistema de Localización de la Universidad Autónoma de Aguascalientes</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
