--- a/configuracion.html
+++ b/configuracion.html
@@ -16,13 +16,12 @@
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-  <link rel="stylesheet" type="text/css" href="css/estilos.css">
-  <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" type="text/css" href="css/estilos.css">
-  <link rel="stylesheet" type="text/css" href="css/bootstrap-switch.css">
-  <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+  	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+  	<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+  	<link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
+  	<link rel="stylesheet" type="text/css" href="css/bootstrap-switch.css">
+  	<link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+  	<link href='https://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<!-- Latest compiled and minified JavaScript -->
@@ -34,26 +33,44 @@
     <script src="js/bootstrap-switch.js"></script>
 </head>
 <body>
-<div class="container text-center">
+<div class="container">
 	<div class="row">
-		<h2 class="texto_cabeza">Por favor selecciona tu configuracion y da click en guardar</h2>
+		<h2 id="texto_cabeza" class="text-center">Por favor selecciona tu configuracion y da click en guardar</h2>
 	</div>
 	<div class="row">
-		<input type="checkbox" name="my-checkbox" checked>
-		<div class="checkbox">
-		  <label>Compartir Ubicacion <input type="checkbox" value="" id="1"></label>
+		<div class="col-xs-4"></div>
+		<div class="col-xs-2">
+		  <label id="text-ingresa-datos"> Compartir Ubicacion</label>
 		</div>
-		<div class="checkbox">
-		  <label>Compartir Horario <input type="checkbox" value="" id="2"></label>
-		</div>
-		<div class="checkbox">
-		  <label>Compartir Profesor <input type="checkbox" value="" id="3"></label>
+		<div class="col-xs-2">
+			<input type="checkbox" name="my-checkbox" id="1">
 		</div>
 	</div>
+	<p></p>
 	<div class="row">
-		<div class="col-md-8"></div>
-		<div class="col-md-2">
-			<button type="button" class="btn  btn-lg" id="btn_guardar">Guardar</button>
+		<div class="col-xs-4"></div>
+		<div class="col-xs-2">
+		  <label id="text-ingresa-datos">Compartir Horario</label>
+		</div>
+		<div class="col-xs-2">
+			<input type="checkbox" name="my-checkbox" id="2">
+		</div>
+	</div>
+	<p></p>
+	<div class="row">
+		<div class="col-xs-4"></div>
+		<div class="col-xs-2">
+		  <label id="text-ingresa-datos">Compartir Profesor</label>
+		</div>
+		<div class="col-xs-2">
+			<input type="checkbox" name="my-checkbox" id="2">
+		</div>
+	</div>
+	<p></p>
+	<div class="row">
+		<div class="col-xs-8"></div>
+		<div class="col-xs-2">
+			<button type="button" class="btn btn-lg" id="btn_guardar">Guardar</button>
 		</div>
 	</div>
 </div>
@@ -61,27 +78,34 @@
 </html>
 <script>
 	$(document).ready(function(){
+		var configuracion_persona=JSON.parse(localStorage.configuracion_persona);
+	    console.log(configuracion_persona);
+	    var todo= configuracion_persona[0].COMPARTIR_UBICACION + configuracion_persona[0].COMPARTIR_HORARIO+configuracion_persona[0].COMPARTIR_PROFESOR;
+	    if(configuracion_persona[0].COMPARTIR_UBICACION=="1"){
+	    	$('#1').prop('checked', true);
+	    }
+	    if(configuracion_persona[0].COMPARTIR_HORARIO=="1"){
+	    	$('#2').prop('checked', true);
+	    }
+	    if(configuracion_persona[0].COMPARTIR_PROFESOR=="1"){
+	    	$('#3').prop('checked', true);
+	    }
 		$("[name='my-checkbox']").bootstrapSwitch();
-		$('input[name="my-checkbox"]').on('switchChange.bootstrapSwitch', function(event, state) {
-			console.log(this); // DOM element
-			console.log(event); // jQuery event
-			console.log(state); // true | false
-		});
 		$('#btn_guardar').click(function() {
 			var compartir_ubicacion;
 			var compartit_horario;
 			var compartit_profesor;
-			if($("#1").is(':checked')) {  
+			if($("#1").is(':checked')) {
             	compartir_ubicacion=1;
 	        } else {  
 	           	compartir_ubicacion=0; 
 	        }
-	        if($("#2").is(':checked')) {  
+	        if($("#2").is(':checked')) {
             	compartit_horario=1;
 	        } else {  
 	           	compartit_horario=0; 
 	        } 
-	        if($("#3").is(':checked')) {  
+	        if($("#3").is(':checked')) {
             	compartit_profesor=1;
 	        } else {  
 	           	compartit_profesor=0; 
@@ -89,14 +113,43 @@
 	        var datos_persona=JSON.parse(localStorage.datos_persona);
 	        console.log(datos_persona);
 	        var id=datos_persona[0].ID;
+	        var id_configuracion=compartir_ubicacion+compartit_horario+compartit_profesor;
+	        switch(id_configuracion){
+	        	case "000":
+	        		id_configuracion=8;
+	        	break;
+	        	case "001":
+	        		id_configuracion=7;
+	        	break;
+	        	case "010":
+	        		id_configuracion=6;
+	        	break;
+	        	case "011":
+	        		id_configuracion=5;
+	        	break;
+	        	case "100":
+	        		id_configuracion=4;
+	        	break;
+	        	case "101":
+	        		id_configuracion=3;
+	        	break;
+	        	case "110":
+	        		id_configuracion=2;
+	        	break;
+	        	case "111":
+	        		id_configuracion=1;
+	        	break;
+	        }
+	        alert(id_configuracion);
 	        $.ajax({
 				url: "http://siluaa.mybluemix.net/API/guardar_config.php",
 				method: 'GET',
-				data: {id: id, compartir_ubicacion: compartir_ubicacion, compartit_horario: compartit_horario, compartit_profesor: compartit_profesor},
+				data: {id: id, id_configuracion: id_configuracion},
 				dataType:'json',
 				mimeType: 'application/json'
 			}).done(function(json) {
 				if(json.result=="true"){
+					alert("exito");
 				   	window.location="index.html";
 				}else{
 				   	alert("Algo salió mal");
